Modifyed default.html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
             <ul class="copyright">
                 <li><strong style="color:#000">Project. __</strong></li>
                 <li><a href="/">Home</a></li>
-                <li><a href="/assets/design_portfolio.io/index.html" target="_blank">Design Portfolio</a></li>
+                <li><a href="/design_portfolio" target="_blank">Design Portfolio</a></li>
                 <li><a href="mailto:cnaa97@gmail.com">cnaa97@gmail.com</a></li>
             </ul>
             
