--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,15 @@
                 {% endif %} {% endfor %}
             </ul>
 
-            <!-- Menu 1 _ Front-end Project -->
+            <!-- Menu :: vision -->
+            <ul class="nav-categori">
+                <span>Vision</span>
+                {% for post in site.categories.vision %} {% if post.url %}
+                <li class="nav-list"><a href="{{ post.url }}">{{ post.title }}</a></li>
+                {% endif %} {% endfor %}
+            </ul>
+
+            <!-- Menu :: Front-end Project -->
             <ul class="nav-categori">
                 <span>Front-end Project</span>
                 {% for post in site.categories.Front-end Project %} {% if post.url %}
@@ -30,14 +38,7 @@
                 {% endif %} {% endfor %}
             </ul>
 
-            <!-- Menu 2 -->
-            <!--<ul class="nav-categori">
-                <span>menu1</span>
-                {% for post in site.categories.test1 %} {% if post.url %}
-                <li class="nav-list"><a href="{{ post.url }}">{{ post.title }}</a></li>
-                {% endif %} {% endfor %}
-            </ul>-->
-
+            
             <a href="#" class="menu-icon">
               <svg viewBox="0 0 18 15">
                 <path fill="#424242" d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484H1.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0 h15.031C17.335,0,18,0.665,18,1.484L18,1.484z"/>
