--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,40 +1,21 @@
 <footer class="site-footer">
 
-  <div class="wrapper">
+    <div class="wrapper">
+        <div class="footer-col-wrapper">
+            <div class="footer-col footer-col-1">
+                <ul class="contact-list">
+                    <li><a href="https://cnaa97.github.io/">Home</a></li>
+                    <li><a href="https://cnaa97.github.io/design_portfolio">Spatial Design Portfolio</a></li>
+                    <li><a href="mailto:{{ site.email }}">Contact Me (Email)</a></li>
+                </ul>
+                <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
+            </div>
 
-    <h2 class="footer-heading">{{ site.title }}</h2>
+            <div class="footer-col footer-col-3">
+                <p>{{ site.description }}</p>
+            </div>
+        </div>
 
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
-        <ul class="contact-list">
-          <li>{{ site.title }}</li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-2">
-        <ul class="social-media-list">
-          {% if site.github_username %}
-          <li>
-            {% include icon-github.html username=site.github_username %}
-          </li>
-          {% endif %}
-
-          {% if site.twitter_username %}
-          <li>
-            {% include icon-twitter.html username=site.twitter_username %}
-          </li>
-          {% endif %}
-        </ul>
-        <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
-
-      </div>
-
-      <div class="footer-col footer-col-3">
-        <p>{{ site.description }}</p>
-      </div>
     </div>
-
-  </div>
 
 </footer>
