--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,40 +1,15 @@
 ---
 layout: default
 ---
+<article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
-<article class="post">
+  <header class="post-header">
+    <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
+    <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
+  </header>
 
-    <header class="post-header">
-        <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
-        <p class="post-meta">
-            <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
-    </header>
-
-    <div class="post-content" itemprop="articleBody">
-        {{ content }}
-    </div>
-
-    <!-- 포스트 하단 다른 글
-    <section>
-        <div class="row">
-            {% for post in site.posts offset:1 %}
-
-            <article class="{% cycle '6u', '6u$' %} 12u(small)">
-                <header>
-                    <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-                </header>
-                <section>
-                    {{ post.excerpt }}
-                </section>
-                <footer>
-                    <ul class="actions">
-                        <li><a href="{{ post.url }}" class="button">Read More</a></li>
-                    </ul>
-                </footer>
-            </article>
-            {% endfor %}
-        </div>
-    </section>
--->
+  <div class="post-content" itemprop="articleBody">
+    {{ content }}
+  </div>
 
 </article>
