--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,4 +1,3 @@
-
 /**
  * Reset some basic elements
  */
@@ -8,6 +7,7 @@ dl, dd, ol, ul, figure {
     margin: 0;
     padding: 0;
 }
+
 
 
 /**
@@ -23,11 +23,8 @@ body {
     -o-font-feature-settings: "kern" 1;
     font-feature-settings: "kern" 1;
     font-kerning: normal;
-    font-weight: 300;
-
-    -webkit-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
 }
+
 
 
 /**
@@ -37,11 +34,13 @@ h1, h2, h3, h4, h5, h6,
 p, blockquote, pre,
 ul, ol, dl, figure,
 %vertical-rhythm {
-    margin-bottom: 8px;
+    margin-bottom: $spacing-unit / 2;
 }
-ul{
-    margin-top: 8px;
+
+p {
+    line-height: 1.7em;
 }
+
 
 /**
  * Images
@@ -49,9 +48,8 @@ ul{
 img {
     max-width: 100%;
     vertical-align: middle;
-    border-radius: 8px;
-    margin-bottom: 12px;
 }
+
 
 
 /**
@@ -66,10 +64,12 @@ figcaption {
 }
 
 
+
 /**
  * Lists
  */
 ul, ol {
+    line-height: 1.7em;
     margin-left: $spacing-unit;
 }
 
@@ -81,6 +81,7 @@ li {
 }
 
 
+
 /**
  * Headings
  */
@@ -89,60 +90,29 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 
-/** Links **/
+
+/**
+ * Links
+ */
 a {
     color: $brand-color;
     text-decoration: none;
-    
+
     &:visited {
-        color: darken($brand-color, 15%);
+        // color: lighten($brand-color, 10%);
     }
 
     &:hover {
         color: $text-color;
+        text-decoration: underline;
     }
 }
 
-.post-content a{
-    font-weight: 400;
-    border-bottom: 2px solid $brand-color;
-    
-    &:hover{
-        border-bottom: 2px solid #111;
-    }
-    
-    &:visited {
-        color: darken($brand-color, 15%);
-        border-bottom: 2px solid darken($brand-color, 15%);
-    }
-    
-    &:visited:hover {
-        color: #111;
-        border-bottom: 2px solid #111;
-    }
-    
-}
 
-u{
-    font-weight: 500;
-}
 
-em, i{
-    font-style: normal;
-    background-color: #FDFF01;
-    display: inline-block;
-    padding: 0 3px 0 3px;
-    font-weight: 400;
-    color: #000;
-}
-
-i{
-    font-weight: 700;
-    background-color: rgba(255,255,255,0);
-    border-bottom: 2px solid #000;
-}
-
-/** Blockquotes **/
+/**
+ * Blockquotes
+ */
 blockquote {
     color: $grey-color;
     border-left: 4px solid $grey-color-light;
@@ -157,34 +127,84 @@ blockquote {
 }
 
 
-/** Code formatting **/
-pre, code {
-    font-size: 13px;
+
+/**
+ * Code formatting
+ */
+pre,
+code {
+    background-color: #F0F2F4;
+    border-radius: 3px;
 }
 
 code {
-    padding: 1px 5px;
+    font-size: 15px;
+    padding: 4px 6px;
 }
 
 pre {
-    border-radius: 8px;
-    padding: 20px 22px;
+    padding: 12px 18px;
     overflow-x: auto;
-    margin-top: 16px;
-    margin-bottom: 16px;
 
     > code {
+        font-size: 13px;
         border: 0;
         padding-right: 0;
         padding-left: 0;
     }
 }
 
-/** Clearfix **/
+
+
+/**
+ * Wrapper
+ */
+.wrapper {
+    max-width: -webkit-calc(#{$content-width-max} - (#{$spacing-unit} * 2));
+    max-width:         calc(#{$content-width-max} - (#{$spacing-unit} * 2));
+    margin-right: auto;
+    margin-left: auto;
+    padding-right: $spacing-unit;
+    padding-left: $spacing-unit;
+    @extend %clearfix;
+
+    @include media-query($on-laptop) {
+        max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
+        max-width:         calc(#{$content-width} - (#{$spacing-unit}));
+        padding-right: $spacing-unit / 2;
+        padding-left: $spacing-unit / 2;
+    }
+}
+
+
+
+/**
+ * Clearfix
+ */
 %clearfix {
+
     &:after {
         content: "";
         display: table;
         clear: both;
+    }
+}
+
+
+
+/**
+ * Icons
+ */
+.icon {
+
+    > svg {
+        display: inline-block;
+        width: 16px;
+        height: 16px;
+        vertical-align: middle;
+
+        path {
+            fill: $grey-color;
+        }
     }
 }
