--- a/css/main.scss
+++ b/css/main.scss
@@ -2,36 +2,6 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 @charset "utf-8";
-@import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);
-
-// Our variables
-		
-$base-font-family: 'Noto Sans KR', sans-serif;
-$base-font-size:   17px;
-$base-font-weight: 400;
-$small-font-size:  $base-font-size * 0.875;
-$base-line-height: 1.8;
-
-$sub-font-size:    13px;
-
-$spacing-unit:     20px;
-
-$text-color:       #111;
-$background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
-
-$grey-color:       #828282;
-$grey-color-light: lighten($grey-color, 40%);
-$grey-color-dark:  darken($grey-color, 25%);
-
-// Width of the content area
-$content-width:    900px;
-
-$on-palm:          600px;
-$on-laptop:        800px;
-$on-desktop:       1224px;
-$on-wide:          1824px;
-
 
 
 // Use media queries like this:
@@ -51,6 +21,7 @@ $on-wide:          1824px;
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
+        "variable",
         "base",
         "layout",
         "syntax-highlighting"
