modify mobile view

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
                 <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
             </div>
 
-            <div class="footer-col footer-col-3">
+            <div class="footer-col footer-col-3 mobile-only">
                 <p>{{ site.description }}</p>
             </div>
         </div>
