convert css to sass for text-select-color code

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -6,6 +6,11 @@
     transition: all .2s;
 }
 
+@include text-selection-color {
+    background: #FDFF86;
+    color: #363636;
+};
+
 /**
  * Site header
  */
