--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,17 +2,17 @@
 
     <div class="wrapper">
         <div class="footer-col-wrapper">
-            <div class="footer-col footer-col-1">
-                <ul class="contact-list">
-                    <li><a href="https://cnaa97.github.io/">Home</a></li>
-                    <li><a href="https://cnaa97.github.io/design_portfolio">Spatial Design Portfolio</a></li>
-                    <li><a href="mailto:{{ site.email }}">Contact Me (Email)</a></li>
-                </ul>
-                <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
+            <div class="footer-desc-wrapper footer-col footer-col-3 desktop-only">
+                <p>{{ site.description }}</p>
             </div>
 
-            <div class="footer-col footer-col-3 mobile-only">
-                <p>{{ site.description }}</p>
+            <div class="footer-list-wrapper footer-col footer-col-1">
+                <ul>
+                    <li><a href="https://cnaa97.github.io/">Home</a></li>
+                    <li><a href="https://cnaa97.github.io/design_portfolio">Spatial Design Portfolio</a></li>
+                    <li><a href="mailto:{{ site.email }}">Contact Me</a></li>
+                </ul>
+                <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
             </div>
         </div>
 
