--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <article class="post">
 
-  <header class="post-header">
+  <header class="post-header" style="margin-bottom: 30px;">
     <h1 class="post-title">{{ page.title }}</h1>
   </header>
 
