--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,284 +1,592 @@
 * {
-    -webkit-transition: all .2s;
-    -moz-transition: all .2s;
-    -ms-transition: all .2s;
-    -o-transition: all .2s;
-    transition: all .2s;
+  @include transition(all .2s);
 }
 
 @include text-selection-color {
-    background: #FDFF86;
-    color: #363636;
-};
+  //background: #FDFF86;
+  //color: #363636;
+}
+
+.slide-up, .slide-down {
+  @include slide-up
+}
+
+.slide-down {
+  @include slide-down;
+}
 
 /**
  * Site header
  */
 .site-header {
-    min-height: 56px;
+  min-height: 56px;
 
-    // Positioning context for the mobile navigation icon
-    position: relative;
-    padding-top: 14px;
+  // Positioning context for the mobile navigation icon
+  position: relative;
+  padding-top: 14px;
 
-    @include media-query($on-laptop) {
-        padding-top: 10px;
+  @include media-query($on-palm) {
+    padding-top: 24px;
+  }
+
+  @include media-query-min($on-laptop) {
+    padding-top: 50px;
+    .site-title {
+      &:hover {
+        @include transform(scale(1.3));
+        @include transition(all .3s);
+      }
     }
-}
+  }
 
-.site-title {
-    line-height: 28px;
-    margin-bottom: 0;
-    float: left;
-    font-size: 15px;
-    padding: 0 10px;
+  .site-title {
+    display: inline-block;
+    font-size: 1.2em;
+    text-align: center;
+    line-height: 2em;
     color: $color-white !important;
-    background-color: #111;
-    margin-top: 14px;
+    width: 38px;
+    height: 38px;
+    background: $color-first;
+    border-radius: 100px;
 
-    @include media-query($on-laptop) {
-        margin-top: 7px;
+    @include media-query($on-palm) {
+      width: 40px;
+      height: 40px;
     }
 
-    &:hover{ text-decoration: none; }
-
-    &,
     &:visited {
-        color: $color-white;
+      //color: $color-white;
     }
-}
+  }
 
-.site-nav {
-    float: right;
+  .site-nav {
     line-height: 56px;
+    float: right;
 
     .menu-icon {
+      display: none;
+    }
+
+    .trigger {
+      .trigger-pages-wrapper {}
+      .trigger-categories-wrapper {
         display: none;
+      }
+    }
+
+    ul {
+      @include clearfix;
+      li {
+        display: inline-block;
+        @include media-query-min($on-palm) {
+          &:not(:last-child) {
+            margin-right: 30px;
+          }
+        }
+      }
     }
 
     .page-link {
-        color: $text-color;
-        line-height: $base-line-height;
+      font-weight: 700;
+      color: $color-second;
+      font-size: 1.2em;
+      line-height: $base-line-height;
 
-        // Gaps between nav items, but not on the last one
-        &:not(:last-child) {
-            margin-right: 20px;
+      @include media-query-min($on-laptop) {
+        &:hover {
+          display: inline-block;
+          color: $color-first;
+          text-decoration: none;
+          position: relative;
+
+          &:after {
+            content: '';
+            position: absolute;
+            width: 20px;
+            border-bottom: 6px solid $color-first;
+            bottom: -16px;
+            left: 0;
+            right: 0;
+            margin-left: auto;
+            margin-right: auto;
+          }
         }
+      }
     }
 
     @include media-query($on-palm) {
-        position: absolute;
-        top: 12px;
-        right: $spacing-unit / 2;
-        // background-color: $background-color;
-        // border: 1px solid $grey-color-light;
-        // border-radius: 5px;
-        text-align: right;
+      text-align: right;
 
-        .menu-icon {
+      .trigger {
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background: rgba(0,0,0,.85);
+        z-index: 9999;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+
+        .trigger-sub-wrapper {
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          @include transform(translate(-50%, -50%));
+          padding-bottom: 80px;
+          .trigger-pages-wrapper {
+          }
+          .trigger-categories-wrapper {
             display: block;
-            float: right;
-            width: 36px;
-            height: 26px;
-            line-height: 0;
-            padding-top: 10px;
+            position: relative;
+            &:before {
+              content: '';
+              position: absolute;
+              width: 30px;
+              border-top: 2px solid $color-first;
+              top: 0;
+              left: 0;
+              right: 0;
+              margin-left: auto;
+              margin-right: auto;
+              margin-top: -14px;
+            }
+            margin-top: 30px;
+          }
+          .btn-close-wrapper {
             text-align: center;
-
-            > svg {
-                width: 18px;
-                height: 15px;
-
-                path {
-                    fill: $grey-color-dark;
-                }
+            position: absolute;
+            width: 100%;
+            bottom: 0;
+            .btn-close {
+              width: 44px;
+              height: 44px;
+              margin-left: auto;
+              margin-right: auto;
             }
+          }
         }
-
-        .trigger {
-            clear: both;
-            display: none;
-        }
-
-        &:hover .trigger {
-            display: block;
-            padding-bottom: 5px;
-        }
-
-        .page-link {
-            display: block;
-            padding: 5px 10px;
-
-            &:not(:last-child) {
-                margin-right: 0;
+        ul {
+          margin-left: 0;
+          margin-bottom: 0;
+          li {
+            width: 100%;
+            a {
+              text-align: center;
+              color: $color-white !important;
+              display: block;
+              padding: 5px 10px;
+              margin-left: 0;
+              font-weight: 700;
+              font-size: 1.3em !important;
+              line-height: 2em !important;
             }
-            margin-left: 20px;
+          }
         }
+      }
+
+      .menu-icon {
+        display: inline-block;
+        width: 40px;
+        height: 40px;
+      }
+
+      .page-link {
+        display: block;
+        padding: 5px 10px;
+
+        &:not(:last-child) {
+          margin-right: 0;
+        }
+        margin-left: 20px;
+      }
     }
+  }
 }
-
-
 
 /**
  * Site footer
  */
 .site-footer {
-    border-top: 1px solid $grey-color-light;
-    padding: $spacing-unit 0;
-}
+  padding: 60px 0;
+  color: $color-white;
 
-.footer-heading {
-    font-size: 18px;
-    margin-bottom: $spacing-unit / 2;
-}
+  @include media-query($on-palm) {
+    padding: 0;
+    margin: 36px 0;
+  }
 
-.contact-list,
-.social-media-list {
-    list-style: none;
-    margin-left: 0;
-    line-height: 1.7em;
-    li {
-        cursor: pointer;
+  @include media-query-min($on-laptop) {
+    background: $color-first;
+    margin-top: 50px;
+    padding-bottom: 70px;
+    .footer-desc-wrapper {
+      p {
+        padding-right: 5em;
+      }
     }
+  }
+
+  .footer-desc-wrapper {
+    p {
+      font-weight: 200;
+      font-size: 1.2em;
+      line-height: 2em;
+    }
+  }
+
+  .footer-list-wrapper {
+    position: relative;
+    //background: $color-second;
+    background-image: linear-gradient(0deg, #8D1B83 0%, #2900FF 100%);
+    @include shadow(0 24px 65px -20px rgba(0, 0, 0, .55));
+
+    @include media-query($on-palm) {
+      width: 100%;
+      height: 300px;
+      ul {
+        li {
+          a {
+
+          }
+        }
+      }
+    }
+
+    ul {
+      list-style: none;
+      margin-left: 0;
+      margin-bottom: 0;
+      line-height: 1.7em;
+      padding-left: 20px;
+      padding-top: 20px;
+
+      li {
+
+        a {
+          color: $color-white;
+          font-size: 1.4em;
+          line-height: 2em;
+        }
+      }
+    }
+
+    .rss-subscribe {
+      font-weight: 200;
+      display: inline-block;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      margin-left: 20px;
+      margin-bottom: 10px;
+
+      a {
+        display: inline-block;
+        color: $color-white;
+        font-weight: 500;
+        margin: 6px;
+        padding-bottom: 4px;
+      }
+    }
+
+    @include media-query-min($on-laptop) {
+      margin-top: -80px;
+      min-height: 300px;
+
+      ul {
+
+        li {
+          a {
+            display: inline-block;
+            border-bottom: 4px solid transparent;
+            &:hover {
+              color: #FCF900;
+              border-bottom: 4px solid #FCF900;
+              //@include transform(translateX(10px));
+            }
+          }
+        }
+      }
+
+      .rss-subscribe {
+        a {
+          border-bottom: 4px solid transparent;
+          &:hover {
+            color: #FCF900;
+            border-bottom: 4px solid #FCF900;
+          }
+        }
+      }
+    }
+  }
 }
 
-.footer-col-wrapper {
-    font-size: 15px;
-    color: $grey-color;
+@include media-query-min($on-laptop) {
+  .footer-col-wrapper {
     margin-left: -$spacing-unit / 2;
-    @extend %clearfix;
-}
+    @include clearfix;
 
-.footer-col {
-    float: left;
-    margin-bottom: $spacing-unit / 2;
-    padding-left: $spacing-unit / 2;
-}
+    .footer-col {
+      float: left;
+    }
 
-.footer-col-1 {
-    width: -webkit-calc(35% - (#{$spacing-unit} / 2));
-    width:         calc(35% - (#{$spacing-unit} / 2));
-}
+    .footer-col-1 {
+      width: -webkit-calc(35% - (#{$spacing-unit} / 2));
+      width: calc(35% - (#{$spacing-unit} / 2));
+    }
 
-.footer-col-2 {
-    width: -webkit-calc(20% - (#{$spacing-unit} / 2));
-    width:         calc(20% - (#{$spacing-unit} / 2));
-}
-
-.footer-col-3 {
-    width: -webkit-calc(65% - (#{$spacing-unit} / 2));
-    width:         calc(65% - (#{$spacing-unit} / 2));
-}
-
-@include media-query($on-laptop) {
-    .footer-col-1,
     .footer-col-2 {
-        width: -webkit-calc(50% - (#{$spacing-unit} / 2));
-        width:         calc(50% - (#{$spacing-unit} / 2));
+      width: -webkit-calc(20% - (#{$spacing-unit} / 2));
+      width: calc(20% - (#{$spacing-unit} / 2));
     }
 
     .footer-col-3 {
-        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
-        width:         calc(100% - (#{$spacing-unit} / 2));
+      width: -webkit-calc(65% - (#{$spacing-unit} / 2));
+      width: calc(65% - (#{$spacing-unit} / 2));
     }
+  }
 }
 
 @include media-query($on-palm) {
-    .footer-col {
-        float: none;
-        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
-        width:         calc(100% - (#{$spacing-unit} / 2));
-    }
+  .footer-col {
+    float: none;
+    width: -webkit-calc(100% - (#{$spacing-unit} / 2));
+    width: calc(100% - (#{$spacing-unit} / 2));
+  }
 }
-
-
 
 /**
  * Page content
  */
 .page-content {
-    padding: $spacing-unit 0;
+  padding: $spacing-unit 0 80px;
+
+  @include media-query($on-palm) {
+    padding: 0;
+  }
 }
 
 .page-heading {
-    font-size: 20px;
+  font-size: 20px;
 }
 
-.page-category{
-    margin-bottom: 40px;
-    padding-bottom: 16px;
-    border-bottom: 1px solid $grey-color-light;
+.page-category {
+  margin-bottom: 40px;
+  padding-bottom: 16px;
+  border-bottom: 1px solid $grey-color-light;
 
-    .cateroty-item{
-        margin-right: 12px;
-        display: inline-block;
-        height: 32px;
-    }
+  .cateroty-item {
+    margin-right: 12px;
+    display: inline-block;
+    height: 32px;
+  }
 }
 
 .post-list {
-    margin-left: 0;
-    list-style: none;
+  margin-left: 0;
+  list-style: none;
 
-    > li {
-        margin-bottom: $spacing-unit;
+  > li {
+    margin-bottom: 30px;
+  }
+
+  .post-custom-wrapper {
+    position: relative;
+    width: 60%;
+    height: 180px;
+    background-color: $color-white;
+    margin-left: auto;
+    margin-right: auto;
+
+    .page-list-image {
+      position: absolute;
+      width: 180px;
+      height: 100%;
+      overflow: hidden;
+      img {
+        height: 100%;
+        width: auto;
+        max-width: none;
+        position: absolute;
+        left: 50%;
+        @include transform(translateX(-50%))
+      }
+      &.yes-image {
+        &:after {
+          content: '';
+          width: 100%;
+          height: 100%;
+          position: absolute;
+          background-image: linear-gradient(0deg, rgba(232, 51, 173, 0.50) 0%, rgba(99, 160, 234, 0.60) 100%);
+        }
+      }
+      &.no-image {
+        background-image: linear-gradient(0deg, #E833AD 0%, #63A0EA 100%);
+      }
     }
+
+    .page-list-content {
+      position: absolute;
+      left: 180px;
+      width: calc(100% - 180px);
+      padding-left: 24px;
+      top: 50%;
+      @include transform(translateY(-50%));
+
+      h3 {
+        display: inline-block;
+        width: 90%;
+        margin-bottom: 0;
+
+        .post-link {
+          color: #000;
+          font-weight: 500;
+          font-size: 24px;
+          width: 100%;
+          height: 32px;
+          display: inline-block;
+          text-overflow: ellipsis; /* 글자 넘는 경우 ...으로 표시 */
+          white-space: nowrap; /* 줄바꿈 방지. 한줄로 나옴 */
+          overflow: hidden; /* 이게 필요함 */
+
+          @include media-query-min($on-laptop) {
+            &:hover {
+              color: $color-first;
+            }
+          }
+        }
+      }
+
+      .post-meta {
+        font-size: $small-font-size;
+        color: #9B9B9B;
+        display: block;
+      }
+
+      .page-list-category {
+        font-size: $small-font-size;
+        color: #D3D3D3;
+        border: 1px solid #D3D3D3;
+        border-radius: 100px;
+        padding: 0 10px;
+        margin-top: 12px;
+        margin-left: -4px;
+        display: inline-block;
+
+        @include media-query-min($on-laptop) {
+          &:hover {
+            color: $color-second;
+            border: 1px solid $color-second;
+          }
+        }
+      }
+    }
+
+    .page-list-shadow {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      margin-left: auto;
+      margin-right: auto;
+      z-index: -1;
+      @include shadow(0 24px 65px -20px rgba(0, 0, 0, .35));
+    }
+  }
+
+  @include media-query($on-palm) {
+    > li {
+    }
+
+    .post-custom-wrapper {
+      width: 100%;
+      height: 340px;
+      .page-list-image {
+        width: 100%;
+        height: 56%;
+        img {
+        }
+        &.no-image {
+        }
+      }
+
+      .page-list-content {
+        width: 94%;
+        top: 56%;
+        height: 44%;
+        left: 0;
+        padding-left: 6%;
+        @include transform(translateY(0));
+        h3 {
+          margin-top: 20px;
+          .post-link {
+          }
+        }
+        .post-meta {
+        }
+        .page-list-category {
+        }
+      }
+    }
+  }
 }
-
-.post-meta {
-    font-size: $small-font-size;
-    color: $grey-color;
-}
-
-.post-link {
-    display: block;
-    font-size: 24px;
-}
-
-
 
 /**
  * Posts
  */
 .post-header {
-    margin-bottom: $spacing-unit;
+  margin-bottom: $spacing-unit;
 }
 
 .post-title {
-    font-size: 42px;
-    letter-spacing: -1px;
-    line-height: 1;
+  font-size: 42px;
+  letter-spacing: -1px;
+  line-height: 1;
 
-    @include media-query($on-laptop) {
-        font-size: 36px;
-    }
+  @include media-query($on-laptop) {
+    font-size: 36px;
+  }
+}
+
+.post {
+  @include media-query($on-palm) {
+    margin-top: 40px;
+  }
 }
 
 .post-content {
-    margin-bottom: $spacing-unit;
+  margin-bottom: $spacing-unit;
 
-    h2 {
-        font-size: 32px;
+  ul li { list-style: circle; }
+  ol li { list-style: decimal; }
 
-        @include media-query($on-laptop) {
-            font-size: 28px;
-        }
+  h2 {
+    font-size: 32px;
+
+    @include media-query($on-laptop) {
+      font-size: 28px;
     }
+  }
 
-    h3 {
-        font-size: 26px;
+  h3 {
+    font-size: 26px;
 
-        @include media-query($on-laptop) {
-            font-size: 22px;
-        }
+    @include media-query($on-laptop) {
+      font-size: 22px;
     }
+  }
 
-    h4 {
-        font-size: 20px;
+  h4 {
+    font-size: 20px;
 
-        @include media-query($on-laptop) {
-            font-size: 18px;
-        }
+    @include media-query($on-laptop) {
+      font-size: 18px;
     }
+  }
 }
 
 /**
@@ -286,13 +594,174 @@
  */
 
 .break {
-    display: block;
-    height: 10px;
-    margin: 0;
+  display: block;
+  height: 10px;
+  margin: 0;
 }
 
+
 .mobile-only {
-    @include media-query($on-palm) {
-        display: none;
+  @include media-query-min($on-palm) {
+    display: none;
+  }
+}
+
+.desktop-only {
+  @include media-query($on-palm) {
+    display: none;
+  }
+}
+
+.main-post-wrapper {
+  margin-top: 60px;
+
+  .pagination {
+    margin-top: 90px;
+    margin-bottom: 20px;
+  }
+
+  @include media-query($on-palm) {
+    margin-top: 16px;
+
+    .pagination {
+      margin-top: 60px;
     }
+  }
+}
+
+.category-page-wrapper {
+  text-align: center;
+  margin-bottom: 50px;
+
+  h3 {
+    font-size: 2em;
+    color: $color-first;
+    font-weight: 500;
+    display: inline-block;
+    position: relative;
+
+    &:after {
+      content: '';
+      position: absolute;
+      width: 30px;
+      border-bottom: 8px solid $color-first;
+      bottom: -20px;
+      left: 0;
+      right: 0;
+      margin-left: auto;
+      margin-right: auto;
+    }
+  }
+}
+
+.categories-wrapper {
+  margin-left: auto;
+  margin-right: auto;
+  width: 498px;
+  @include media-query-min($on-laptop) {
+    margin-top: -20px;
+  }
+
+  @include clearfix;
+
+  ul {
+    text-align: center;
+    margin: 0;
+
+    li {
+      list-style: none;
+      text-align: center;
+      background-image: linear-gradient(0deg, #F63F77 0%, #FAD91A 100%);
+      position: relative;
+      margin-bottom: 24px;
+      float: left;
+      width: 150px;
+      height: 150px;
+
+      margin-right: 24px;
+      &:nth-child(3n + 3) {
+        margin-right: 0;
+      }
+
+      @include media-query-min($on-laptop) {
+        &:hover {
+          @include transform(translateY(-10px));
+          @include transition(all .3s);
+        }
+      }
+
+      a {
+        font-size: 1.3em;
+        font-weight: 500;
+        color: $color-white;
+        display: table-cell;
+        width: inherit;
+        height: inherit;
+        vertical-align: middle;
+      }
+    }
+  }
+
+  @include media-query($on-palm) {
+    display: none;
+  }
+}
+
+.pagination {
+  text-align: center;
+
+  .btn-base {
+    display: inline-block;
+    width: 60px;
+    height: 60px;
+    text-align: center;
+    font-size: 1.6em;
+    background-color: $color-second;
+    color: $color-white;
+    font-weight: 500;
+    line-height: 56px;
+    margin: 0 6px;
+
+    @include media-query($on-palm) {
+      width: 40px;
+      height: 40px;
+      line-height: 40px;
+      font-size: 1.3em;
+    }
+  }
+
+  .btn-arrow {
+    background: none;
+    @include media-query($on-palm) {
+      svg {
+        width: 40px;
+      }
+    }
+
+    &.btn-prev-next-not-active {
+    }
+
+    &.btn-prev-next-active {
+      &:hover {
+        svg {
+          polygon {
+            fill: $color-first;
+          }
+        }
+      }
+    }
+  }
+
+  .btn-page {
+    &.btn-page-active {
+      cursor: default;
+      background-color: $color-first;
+    }
+    &.btn-page-not-active {
+      &:hover {
+        @include transform(translateY(-10px));
+        @include transition(all .3s);
+      }
+    }
+  }
 }
