hide pages on mobile

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,9 +14,9 @@
       </div>
       <div class="trigger hidden-content slide-up">
         <div class="trigger-sub-wrapper">
-          <div class="trigger-pages-wrapper">
-            {% include pages.html %}
-          </div>
+          <!--<div class="trigger-pages-wrapper">-->
+            <!--{% include pages.html %}-->
+          <!--</div>-->
           <div class="trigger-categories-wrapper mobile-only">
             {% include categories.html %}
           </div>
