--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -150,7 +150,8 @@
               right: 0;
               margin-left: auto;
               margin-right: auto;
-              margin-top: -14px;
+              //margin-top: -14px;
+              margin-top: -40px;
             }
             margin-top: 30px;
           }
