fixed layout, markdown base font-weight

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -439,6 +439,7 @@
         display: inline-block;
         width: 90%;
         margin-bottom: 0;
+        padding-top: 0;
 
         .post-link {
           color: #000;
