change color for meta info

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -462,14 +462,14 @@
 
       .post-meta {
         font-size: $small-font-size;
-        color: #9B9B9B;
+        color: #aaa;
         display: block;
       }
 
       .page-list-category {
         font-size: $small-font-size;
-        color: #D3D3D3;
-        border: 1px solid #D3D3D3;
+        color: #ccc;
+        border: 1px solid #ccc;
         border-radius: 100px;
         padding: 0 10px;
         margin-top: 12px;
