update open graph uri

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,9 +5,7 @@
 
     <meta property="og:title" content="Project. __ Junho Park">
     <meta property="og:description" content="Design / Vision / Coding">
-    <meta property="og:site_name" content="Project. __ Junho Park">
-    <meta property="og:url" content="cnaa97.github.io">
-    <meta property="og:image" content="{{site.baseurl}}/public/img/graph.png">
+    <meta property="og:image" content="https://cnaa97.github.io/public/img/graph.png">
 
     <title>
         {% if page.title %}
