--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -598,6 +598,15 @@
       font-size: 18px;
     }
   }
+
+  img {
+    margin: 30px 0 20px;
+    border-radius: 4px;
+    border: 1px solid #efefef;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 /**
