change mata tag

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,8 +3,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta property="og:title" content="Project. __ Junho Park">
-    <meta property="og:description" content="Design / Vision / Coding">
+    <!-- <meta property="og:title" content="Project. __ Junho Park"> -->
+    <!-- <meta property="og:description" content="Design / Vision / Coding"> -->
     <meta property="og:image" content="http://cnaa97.github.io/public/img/graph.png">
 
     <title>
