--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -166,6 +166,13 @@ pre {
     padding-right: $spacing-unit / 2;
     padding-left: $spacing-unit / 2;
   }
+
+  @include media-query($on-palm) {
+    &.wrapper-content {
+      padding-right: 16px;
+      padding-left: 16px;
+    }
+  }
 }
 
 /**
