--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,6 +21,7 @@
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
     <!--<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>-->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <script src="/public/js/libs/modernizr.custom.js"></script>
     <script src="/public/js/main.js"></script>
 </head>
