--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,3 +21,11 @@
     </div>
 
 </footer>
+
+<span>
+    {% if jekyll.environment == 'production' %}
+    I'm in production!
+    {% else %} 
+    I'm in development!
+    {% endif %}
+</span>
