--- a/_sass/_variable.scss
+++ b/_sass/_variable.scss
@@ -1,6 +1,6 @@
 // variables
 
-$base-font-family: "Noto Sans Korean", "Helvetica Neue", Helvetica, Arial, sans-serif;
+$base-font-family: "Gothic A1", "Noto Sans Korean", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $base-font-size:   16px;
 $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
