--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
   <div class="wrapper">
 
-    <a class="site-title" href="{{ site.baseurl }}/">JP</a>
+    <a class="site-title" href="{{ site.baseurl }}/">Juno</a>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon toggle-content mobile-only">{% include btn-menu.svg %}</a>
