--- a/_sass/_variable.scss
+++ b/_sass/_variable.scss
@@ -15,6 +15,11 @@ $brand-color:      #3790FF;
 
 $color-first:      #F5174E;
 $color-second:     #4C1CE4;
+$color-third :     #26A6FE;
+$color-four :      #FFE601;
+$color-five :      #FE4E39;
+
+$color-timeline:   #D8D8D8;
 
 $color-white:      #fff;
 
