--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@
                     <li><a href="/about">About</a></li>
                     <li><a href="/cv">CV</a></li>
                     <!-- <li><a href="https://cnaa97.github.io/design_portfolio">Spatial Design Portfolio</a></li> -->
-                    <li><a href="mailto:{{ site.email }}">EMail Me</a></li>
+                    <li><a href="mailto:{{ site.email }}">Email Me</a></li>
                 </ul>
                 <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
             </div>
