--- a/_includes/pages.html
+++ b/_includes/pages.html
@@ -1,9 +1,23 @@
 <ul>
+    {% comment %}
+    {% endcomment %}
+
     {% for my_page in site.pages %}
-    {% if my_page.title %}
+    {% if my_page.title == 'CV' %}
     <li>
         <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
     </li>
     {% endif %}
     {% endfor %}
+    
+    
+    <li class="btn-lang">
+        {% if site.lang == "ko" %}
+            {% capture link1 %}{{ site.baseurl_root }}en{{ page.url}}{% endcapture %}
+            <a href="{{ link1 }}">{% t global.en %}</a>
+        {% elsif site.lang == "en" %}
+            {% capture link2 %}{{ site.baseurl_root }}{{ page.url  }}{% endcapture %}
+            <a href="{{ link2 }}">{% t global.ko %}</a>
+        {% endif %}
+    </li>
 </ul>
